# PhemeTrade

./: .gitignore  Backtest.txt  CLAUDE_FABLE5_BUILD_PROMPT.md  DECISIONS.md  Gold_Strategy_TH.md  Gold_Trading_Strategy.md  PROJECT_CONCLUSION.md  README.md  RESEARCH_REGISTRY.md  TECHNICAL_SEARCH_CONCLUSION.md  TRACK_A_PREFLIGHT.md  VALIDATION.md  backtest_m15_config.yaml  exness_config.yaml  forwardtest_iter3_config.yaml  pyproject.toml  run_forwardtest_basket.bat  sample_config.yaml
BacktestData/: EURUSD_D1.csv
doc/: Liquidity_Rule.md  Market_Structure_Forex.md  Price_Action_Startrader.md  QM_Pattern.md  README_calendar.md  us_high_impact_calendar_2018_2026.csv
examples/: economic_calendar_sample.csv
gold_qm_system/: __init__.py  cli.py  research.py  research_gate.py
gold_qm_system/calendar/: __init__.py  news.py
gold_qm_system/config/: __init__.py  schema.py
gold_qm_system/data/: __init__.py  loaders.py  mtf.py  spread.py
gold_qm_system/engine/: __init__.py  aggregator.py  channel_breakout.py  feed.py  post_news.py  runner.py  session_open.py  session_premium.py  strategy.py
gold_qm_system/execution/: __init__.py  broker.py  killswitch.py  (+1 more)
live/: c4_trend_frozen.yaml
research/: holdout.json  registry.jsonl
scripts/: c1_session_open.py  c2_session_premium.py  c3_post_news.py  c4_basket.py  c4_channel_breakout.py  convert_backtest_data.py  cost_regime_g8.py  crypto_weekend.py  fetch_exness_mt5.py  forwardtest_basket.py  forwardtest_exness.py  h4_trend.py  portfolio_backtest.py  scope_metrics.py  swap_g8_scope.py  turn_of_month.py  universe_scan.py
(+33 files in other folders)
